@@ -24,9 +24,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>narayana-quickstarts-all</artifactId>
+        <groupId>org.jboss.narayana.quickstart</groupId>
+        <version>5.10.5.Final-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>commit-markable-resource</artifactId>
-    <version>5.10.1.Final</version>
     <packaging>war</packaging>
 
     <name>Narayana Quickstarts: Commit Markable Resource in Wildfly</name>
@@ -40,11 +46,10 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <server.args>-Dprojectdir=${project.build.directory}</server.args>
+        <surefire.argline></surefire.argline>
         <jvm.args>-server -Xms64m -Xmx1024m -XX:MaxPermSize=512m ${server.args}</jvm.args>
         <jvm.args.debug></jvm.args.debug>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
-
-        <xboot.classpath>-Xbootclasspath/a:${java.home}/../lib/tools.jar</xboot.classpath>
 
         <version.javaee.spec>1.1.1.Final</version.javaee.spec>
         <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
@@ -52,9 +57,9 @@
         <version.junit>4.12</version.junit>
         <version.surefire.plugin>2.19.1</version.surefire.plugin>
         <version.arquillian>1.1.11.Final</version.arquillian>
-        <version.arquillian.wildfly>2.1.1.Final</version.arquillian.wildfly>
-        <version.arquillian.byteman>1.0.0.Final-SNAPSHOT</version.arquillian.byteman>
-        <version.byteman>3.0.8</version.byteman>
+        <version.arquillian.wildfly>2.2.0.Final</version.arquillian.wildfly>
+        <version.arquillian.byteman>1.1.0</version.arquillian.byteman>
+        <version.byteman>4.0.10</version.byteman>
         <version.h2>1.4.195</version.h2>
         <version.creaper>1.6.1</version.creaper>
         <version.wildfly.core>4.0.0.Final</version.wildfly.core>
@@ -70,6 +75,7 @@
                 <version>${version.surefire.plugin}</version>
                 <configuration>
                     <skip>false</skip>
+                    <argLine>${surefire.argline}</argLine>
                     <systemPropertyVariables combine.children="append">
                         <server.jvm.args>${jvm.args} ${jvm.args.debug}</server.jvm.args>
                         <node.address>127.0.0.1</node.address>
@@ -125,10 +131,22 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-           <groupId>org.wildfly.core</groupId>
-           <artifactId>wildfly-logging</artifactId>
-           <version>${version.wildfly.logging}</version>
-           <scope>provided</scope>
+            <groupId>org.wildfly.core</groupId>
+            <artifactId>wildfly-logging</artifactId>
+            <version>${version.wildfly.logging}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -207,6 +225,16 @@
             <artifactId>wildfly-cli</artifactId>
             <version>${version.wildfly.core}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -217,17 +245,78 @@
                 <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.args.debug>
             </properties>
         </profile>
-        <profile>
-            <id>Windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <xboot.classpath>"-Xbootclasspath/a:${java.home}\..\lib\tools.jar"</xboot.classpath>
-            </properties>
-        </profile>
+
+
+      <!-- Byteman-Arquillian-related profiles for configuring use of Byteman on different platforms/JDKs-->
+      <!-- these setup is needed for Arquillian Extension Byteman which makes possible to use Byteman rules with @BMRule while Arquillian JUnit runner is in command -->
+      <profile>
+          <id>use-toolsjar-jigsaw</id>
+          <activation>
+              <jdk>[1.9,)</jdk>
+          </activation>
+          <properties>
+              <!-- required for VM attach under JDK 9-->
+              <surefire.argline>-Djdk.attach.allowAttachSelf=true</surefire.argline>
+              <xboot.classpath>-Djdk.attach.allowAttachSelf=true</xboot.classpath>
+          </properties>
+          <dependencies />
+      </profile>
+      <profile>
+          <id>windows-use-toolsjar</id>
+          <activation>
+              <os>
+                  <family>windows</family>
+              </os>
+          </activation>
+          <properties>
+              <xboot.classpath>"-Xbootclasspath/a:${java.home}\..\lib\tools.jar"</xboot.classpath>
+          </properties>
+      </profile>
+      <profile>
+          <id>linux-use-toolsjar</id>
+          <activation>
+              <os>
+                  <family>unix</family>
+              </os>
+              <file>
+                  <exists>${java.home}/../lib/tools.jar</exists>
+              </file>
+          </activation>
+          <properties>
+              <xboot.classpath>-Xbootclasspath/a:${java.home}/../lib/tools.jar</xboot.classpath>
+          </properties>
+          <dependencies>
+              <dependency>
+                  <groupId>com.sun</groupId>
+                  <artifactId>tools</artifactId>
+                  <version>1.8</version>
+                  <scope>system</scope>
+                  <systemPath>${java.home}/../lib/tools.jar</systemPath>
+              </dependency>
+          </dependencies>
+      </profile>
+
+      <profile>
+          <id>osx-use-toolsjar-as-classes-jar</id>
+          <activation>
+              <file>
+                  <exists>${java.home}/../Classes/classes.jar</exists>
+              </file>
+          </activation>
+          <properties>
+              <xboot.classpath>-Xbootclasspath/a:${java.home}/../Classes/classes.jar</xboot.classpath>
+          </properties>
+          <dependencies>
+              <dependency>
+                  <groupId>com.sun</groupId>
+                  <artifactId>tools</artifactId>
+                  <version>1.8</version>
+                  <scope>system</scope>
+                  <systemPath>${java.home}/../Classes/classes.jar</systemPath>
+              </dependency>
+          </dependencies>
+      </profile>
+
     </profiles>
 
     <repositories>
